test/files/neg/t4649.check
t4649.scala:12: error: @tailrec annotated method contains no recursive calls
  @tailrec final def remove(idx: Int, count: Int): Unit =
                     ^
1 error
